--- a/Workshop05/Workshop05.vcxproj.filters
+++ b/Workshop05/Workshop05.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClCompile Include="Movie.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="w5_p1.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h">
@@ -56,6 +53,9 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="movies.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="reflect.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
